# sphinx-graphql

./: .gitremotes  CONTRIBUTING.rst  MANIFEST.in  Pipfile  pyproject.toml  setup.cfg
0.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.1.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html
0.1.1-pre1/: .buildinfo  genindex.html  index.html  objects.inv  search.html
0.1.1-pre1/.doctrees/: environment.pickle
0.1.1-pre1/_static/: documentation_options.js
0.1.1-pre1/explanations/: why-is-something-so.html
0.1.1-pre1/how-to/: embed-graphiql.html
0.1.1-pre1/reference/: api.html  contributing.html
0.1.1-pre1/tutorials/: installation.html
0.1.1-pre2/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.1.1-pre2/.doctrees/: environment.pickle
0.1.1-pre2/explanations/: why-is-something-so.html
0.1.1-pre2/how-to/: embed-graphiql.html
0.1.1-pre2/reference/: api.html  contributing.html
0.1.1-pre2/tutorials/: installation.html
0.1.1-pre3/: .buildinfo  genindex.html  index.html  objects.inv  search.html
0.1.1-pre3/.doctrees/: environment.pickle
0.1.2/: .buildinfo  genindex.html  index.html  objects.inv  search.html
0.1.2-pre1/: .buildinfo  genindex.html  index.html  objects.inv  search.html
docs/: conf.py
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx_graphql/: attachGraphiQL.js  attachVoyager.js  graphiql.py  voyager.py
tests/: test_boilerplate_removed.py  test_graphiql.py  test_voyager.py
(+60 files in other folders)
